--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 28
-
-
 
     defaultConfig {
         minSdkVersion 16
@@ -11,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -27,10 +26,22 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.android.support:appcompat-v7:28.0.0'
-    //RxJava2 & RxAndroid2
+    // appcompat
+    api 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    api 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha01'
+    api 'com.google.android.material:material:1.0.0'
+
+    // RxJava2 & RxAndroid2
     api 'io.reactivex.rxjava2:rxjava:2.1.5'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // multitype
+    api 'me.drakeet.multitype:multitype:3.5.0'
+
+    // butterknife
+    api 'com.jakewharton:butterknife:9.0.0-rc2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 
     testImplementation 'junit:junit:4.12'
 }
