--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,16 +32,19 @@ dependencies {
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha01'
     api 'com.google.android.material:material:1.0.0'
 
+    // Glide
+    api 'com.github.bumptech.glide:glide:4.8.0'
+
+    // butterknife
+    api 'com.jakewharton:butterknife:9.0.0-rc2'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
+
     // RxJava2 & RxAndroid2
     api 'io.reactivex.rxjava2:rxjava:2.1.5'
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // multitype
     api 'me.drakeet.multitype:multitype:3.5.0'
-
-    // butterknife
-    api 'com.jakewharton:butterknife:9.0.0-rc2'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 
     testImplementation 'junit:junit:4.12'
 }
