feat(gradle):调整三方库版本统一配置

--- a/_core/build.gradle
+++ b/_core/build.gradle
@@ -54,5 +54,5 @@ dependencies {
     // ARouter,compiler需在各个module中引入
     api "com.alibaba:arouter-api:$versions.arouter_api"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$versions.junit"
 }
