--- a/config.gradle
+++ b/config.gradle
@@ -17,13 +17,18 @@ ext.versions = versions
 versions.appcompat = supportVersion
 versions.recyclerview = supportVersion
 versions.swiperefreshlayout = supportVersion
+versions.constraintlayout = '2.0.0-alpha2'
 versions.material = '1.0.0'
 versions.glide = '4.8.0'
+versions.okhttp = '3.11.0'
+versions.okio = '1.14.0'
+versions.retrofit = '2.4.0'
 versions.butterknife = '10.0.0'
 versions.butterknife_compiler = '10.0.0'
 versions.rxjava = '2.1.17'
 versions.rxandroid = '2.0.2'
 versions.multitype = '3.5.0'
+versions.junit = '4.12'
 
 versions.arouter_api = '1.4.1'
 versions.arouter_compiler = '1.2.2'
