--- a/_network/build.gradle
+++ b/_network/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: '../config.gradle'
 
 android {
     compileSdkVersion 28
@@ -29,13 +30,13 @@ dependencies {
     api project(':_core')
 
     //okhttp3 & okio
-    api 'com.squareup.okhttp3:okhttp:3.11.0'
-    api 'com.squareup.okio:okio:1.14.0'
+    api "com.squareup.okhttp3:okhttp:$versions.okhttp"
+    api "com.squareup.okio:okio:$versions.okio"
 
     //Retrofit2
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    api "com.squareup.retrofit2:retrofit:$versions.retrofit"
+    api "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+    api "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:$versions.junit"
 }
